--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.2",
+    "mongoose": "^8.5.2",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "stripe": "^16.5.0"
   }
 }
