--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "build": "npm i"
+    "build": "npm i",
+    "postinstall": "cd client && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
