--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
     "axios": "^1.7.3",
+    "chart.js": "^4.4.7",
     "dotenv": "^16.4.7",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
