--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "build": "npm i",
-    "postinstall": "cd client && npm install && npm run build"
+    "build": "npm i"
   },
   "author": "",
   "license": "ISC",
